<resources>
    <string name="app_name">Where\'s My Car?</string>

    //home frag
    <string name="title_home">Start Menu</string>
    <string name="lbl_record_park">I am Parked!</string>
    <string name="lbl_spinner">Choose Vehicle</string>
    <string name="lbl_history">History</string>

	<string name="textview_setup">Setup</string>
    <string name="lbl_setup">Setup</string>

    //Setup
    <string name="lbl_add_car">Add Car</string>
    <string name="lbl_bluetooth">Bluetooth</string>
    <string name="lbl_edit_car">Edit Car</string>


    //add vehicle
    <string name="title_add_vehicle">Add/Edit Vehicle</string>
    <string name="lbl_rego">Registration</string>
    <string name="hint_rego">eg: 1AAA000</string>
    <string name="lbl_vehicle_name">Name</string>
    <string name="hint_vehicle_name">eg: Mitzi</string>
    <string name="lbl_vehicle_description">Description</string>
    <string name="hint_vehicle_description">eg: work beast</string>
    <string name="btn_vehicle">Submit</string>
    <string name="regoWarning">Registration can not be left empty</string>
    <string name="btn_delete_vehicle">Delete</string>

    //vehicle list
    <string name="title_vehicle_list">Vehicle List</string>

    //duration and cost
    <string name="title_cost_duration">Timed Parking Information</string>
    <string name="lbl_hour">Hour</string>
    <string name="lbl_min">Minutes</string>
    <string name="lbl_cost">Cost Per Hour</string>
    <string name="btn_dur_cost">Next</string>



    //bluetooth
    <string name="bt_devices">Available devices:</string>
    <string name="bt_connection_lost">Bluetooth connection lost.</string>
    <string name="bt_tap_device">Tap a device to connect.</string>

    //is there time limit
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="ask_cost_or_fee">Do you have a parking fee or time limit?</string>

    //waiting
    <string name="parking_recorded">Parking recorded!</string>
    <string name="click_return">Click return when you need to find your vehicle.</string>
    <string name="lbl_return">Return</string>
    <string name="wheres_my_car">Where\'s My Car?</string>
    <string name="start_menu">Start menu</string>
    <string name="no_bt_devices">No devices available.</string>
    <string name="lbl_time_remaining">Time remaining: </string>
    <string name="lbl_times_up">Times up!</string>
    <string name="refresh">Refresh</string>
    <string name="btn_return">Return</string>

    //history
    <string name="title_history">Parking History</string>
    <string name="lbl_history_total">Total costs: $</string>


</resources>
