<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_cost_or_fee"/>

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_yes"/>

    <Button
        android:id="@+id/btn_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_no"/>
</LinearLayout>