<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/lbl_bluetooth"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_refresh_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"/>

    <TextView
        android:id="@+id/textViewDevicesStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/no_bt_devices"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/listviewBluetoothDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"/>

</LinearLayout>